testing/tests/ui/filter-signature-validation.stderr
error: Filter function missing required input and environment arguments. Example: `fn filter0(_: &dyn std::fmt::Display, _: &dyn askama::Values) -> askama::Result<String>`
 --> tests/ui/filter-signature-validation.rs:3:19
  |
3 |     pub fn filter0() -> askama::Result<String> {}
  |                   ^

error: Filter function missing required environment argument. Example: `fn filter0(_: &dyn std::fmt::Display, _: &dyn askama::Values) -> askama::Result<String>`
 --> tests/ui/filter-signature-validation.rs:6:19
  |
6 |     pub fn filter1(input: usize) -> askama::Result<String> {}
  |                   ^

error: Filter function missing required environment argument. Example: `fn filter0(_: &dyn std::fmt::Display, _: &dyn askama::Values) -> askama::Result<String>`
 --> tests/ui/filter-signature-validation.rs:9:19
  |
9 |     pub fn filter2(_: &dyn askama::Values) -> askama::Result<String> {}
  |                   ^

error: Const generics are currently not supported for filters
  --> tests/ui/filter-signature-validation.rs:14:20
   |
14 |     pub fn filter0<const T: bool>(input: usize, _: &dyn askama::Values) -> askama::Result<String...
   |                    ^^^^^

error: Filter functions don't support generic parameter defaults
  --> tests/ui/filter-signature-validation.rs:19:24
   |
19 |     pub fn filter0<T = f64>(input: usize, _: &dyn askama::Values, arg: T) -> askama::Result<Stri...
   |                        ^^^

error: Filter function is missing return type
  --> tests/ui/filter-signature-validation.rs:24:56
   |
24 |     pub fn filter0(input: usize, _: &dyn askama::Values) {}
   |                                                        ^

error: Only conventional function arguments are supported
  --> tests/ui/filter-signature-validation.rs:30:58
   |
30 |     pub fn filter0(input: usize, _: &dyn askama::Values, Wrapper(arg): Wrapper) -> askama::Resul...
   |                                                          ^^^^^^^

error: Impl generics are currently not supported for filters
  --> tests/ui/filter-signature-validation.rs:35:63
   |
35 |     pub fn filter0(input: usize, _: &dyn askama::Values, arg: impl std::fmt::Display) -> askama:...
   |                                                               ^^^^

error: All required arguments must appear before any optional ones
  --> tests/ui/filter-signature-validation.rs:40:92
   |
40 | ...:Values, #[optional(1337)] opt_arg: usize, req_arg: usize) -> askama::Result<String> {}
   |                                               ^^^^^^^

error: Impl generics are currently not supported for filters
  --> tests/ui/filter-signature-validation.rs:45:85
   |
45 |     pub fn filter0(input: usize, _: &dyn askama::Values, #[optional(1337)] opt_arg: impl std::fm...
   |                                                                                     ^^^^

error: Optional arguments must not use generic parameters
  --> tests/ui/filter-signature-validation.rs:48:99
   |
48 | ...kama::Values, #[optional(1337usize)] opt_arg: T) -> askama::Result<String> {}
   |                                                  ^

error: Optional arguments must not use generic parameters
  --> tests/ui/filter-signature-validation.rs:51:106
   |
51 | ...alues, #[optional(1337usize)] opt_arg: Option<T>) -> askama::Result<String> {}
   |                                                  ^
